--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.5.5",
     "sweetalert": "^2.1.2",
     "tslib": "^2.0.0",
